# xy-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
apps/admin-console/: README.md
apps/automation-worker/app/: main.py
apps/automation-worker/tests/: test_worker.py
apps/hermes-mcp-server/app/: __init__.py  main.py
apps/hermes-mcp-server/tests/: conftest.py  test_playwright_h5_adapter.py  test_read_models.py  test_read_provider.py  test_read_provider_resolver.py  test_read_tools_api.py  test_smoke.py
docs/architecture/: database-schema.md  mcp-tools.md  system-design.md
docs/prompts/: hermes-operator-prompt.md
docs/runbooks/: approval-policy.md
infra/compose/: docker-compose.yml
infra/docker/: README.md
infra/monitoring/prometheus/: prometheus.yml
scripts/: codex-long-task-init.sh
spec/: README.md
spec/tasks/env-bootstrap-and-github-push-2026-04-17/: 000-high-roi-xy03-env-bootstrap-and-github-push-roadmap-2026-04-17.md  001-env-and-remote-bootstrap-report-2026-04-17.md  002-runtime-compat-fix-report-2026-04-17.md  003-validation-and-docs-report-2026-04-17.md  004-push-prep-report-2026-04-17.md  00n-global-review-report-2026-04-17.md  xy03-log.md  xy03-task-report-template.md  xy03-taskboard-2026-04-17.md
spec/tasks/mvp1-read-foundation-2026-04-17/: 000-high-roi-xy02-mvp1-read-foundation-roadmap-2026-04-17.md  001-shared-schema-provider-report-2026-04-17.md  002-read-api-endpoints-report-2026-04-17.md  003-tests-doc-contract-report-2026-04-17.md  004-validation-gates-output-2026-04-17.txt  xy02-log.md  (+4 more)
spec/templates/: long-task
(+40 files in other folders)
