[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xianyu-agent-platform"
version = "0.1.0"
description = "Hermes-driven Xianyu operations copilot monorepo skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "uvicorn>=0.35.0",
]

[tool.setuptools]
py-modules = []
